--- a/website/css/toolPage.css
+++ b/website/css/toolPage.css
@@ -101,8 +101,7 @@ header button:hover:not(.active) {
   right: 30%;
   width: 40%;
   height: 75%;
-  background: rgb(105, 105, 105);
-  border: 2px solid #000000;
+  background: var(--sideNavColor);
   padding: 10px;
   z-index: 12;
 }
@@ -122,7 +121,8 @@ header button:hover:not(.active) {
   height: 7%;
   bottom: 1%;
   left: 10%;
-  background: #416788;
+  border-radius: 10%;
+  background: var(--sideNavColor2);
   border: 0;
 }
 
@@ -450,7 +450,7 @@ header button:hover:not(.active) {
   display: block;
   margin: 0 auto;
 }
-/* 
+/*
 .selectNav input[type=text],
 select,
 textarea { */
